# RTLC2

./: .gitignore  Makefile  README.md
agent/: CMakeLists.txt
agent/cmake/: toolchain-linux-arm64.cmake  toolchain-linux-x64.cmake  toolchain-windows-x64.cmake  toolchain-windows-x86.cmake
agent/include/: agent.h  bof.h  config.h.in  crypto.h  evasion.h  execution.h  jobs.h  obfuscation.h  persistence.h  shellcode_encoder.h  syscalls.h  transport.h
agent/loader/: CMakeLists.txt  loader_dll_win.c  loader_posix.c  loader_win.c
agent/src/: main.cpp
agent/src/bof/: loader.cpp
agent/src/core/: agent.cpp  jobs.cpp  task.cpp
agent/src/crypto/: aes.cpp  obfuscation.cpp  shellcode_encoder.cpp  xor.cpp
agent/src/evasion/: amsi.cpp  argue.cpp  etw.cpp  etwti.cpp  heap_encrypt.cpp  hw_bp_hook.cpp  injection.cpp  module_stomp.cpp  ppid_spoof.cpp  sandbox.cpp  sleep.cpp  spoof_call.S  spoof_call_x86.S  stack_spoof.cpp  threadless_inject.cpp  unhook.cpp
agent/src/execution/: dotnet.cpp  pe_loader.cpp  powershell.cpp  shellcode_exec.cpp
agent/src/modules/: clipboard.cpp  credentials.cpp  keylogger.cpp  lateral.cpp  lolbas.cpp  migrate.cpp  persistence.cpp  persistence_posix.cpp  persistence_win.cpp  portfwd.cpp  portscan.cpp  privesc.cpp  recon.cpp  registry_write.cpp  rportfwd.cpp  services.cpp  shell_posix.cpp  shell_win.cpp  socks5.cpp  sysinfo_posix.cpp  sysinfo_win.cpp  token.cpp
agent/src/syscalls/: resolver.cpp  syscall_gate.S  syscall_gate_arm64.S  syscall_gate_x86.S  syscalls.cpp
agent/src/transport/: dns.cpp  doh.cpp  http.cpp  p2p.cpp  smb.cpp  tcp.cpp
configs/: teamserver.yaml
docker/: Dockerfile.build
docs/: README.md  agent.md  architecture.md  bofs.md  deployment.md  profiles.md  teamserver.md  webui.md
plugins/: imgpayload.json
profiles/: amazon.json  apt28_fancy.json  apt29_cozy.json  apt32_ocean.json  apt41_double.json  bumblebee.json  cobalt_strike.json  dropbox.json  emotet.json  fin7.json  github_api.json  hafnium.json  icedid.json  lazarus.json  office365.json  qakbot.json  sliver_default.json  stackoverflow.json  trickbot.json  turla_snake.json  wikipedia.json  windows_update.json  zoom.json
scripts/: generate_agent.sh  generate_powershell.sh  setup_kali.sh
teamserver/: go.mod  go.sum
teamserver/bofs/credential/: dcsync.json  hashdump.json  kerberoast.json  kerberoast_bof.json  nanodump.json  patchit.json  sa_vault.json  sa_wifi.json  shadow_dump.json  zerologon.json
teamserver/bofs/dotnet/: asrenum.json  certify_bof.json  inline_execute_assembly.json  rubeus_bof.json  seatbelt_bof.json  sharphound_bof.json  sharpview_bof.json  watson_bof.json
teamserver/bofs/evasion/: amsi_patch.json  block_dlls.json  callback_injection.json  disable_defender.json  etw_disable.json  etw_patch.json  module_stomp.json  ppid_spoof.json  syscalls_inject.json  unhook_bof.json  unhook_ntdll.json
teamserver/bofs/lateral/: psexec_bof.json  reg_save.json  sc_create.json  sc_delete.json  sc_start.json  sc_stop.json  schtask_create.json  winrm_bof.json  wmi_exec.json
teamserver/bofs/persistence/: com_hijack.json  dll_hijack.json  registry_persist.json  scheduled_task.json  schtask_persist.json  service_persist.json  startup_folder.json  typelib_hijacking.json  wmi_persist.json
teamserver/bofs/recon/: adcs_enum.json  arp.json  cacls.json  dns_cache.json  domain_trusts.json  driversigs.json  env.json  ipconfig_full.json  ldap_query.json  listdns.json  locale.json  netstat.json  nslookup.json  portscan.json  resources.json  schtasks_query.json  tasklist.json  uptime.json  whoami.json
teamserver/cmd/teamserver/: main.go
teamserver/internal/agent/: manager.go
teamserver/internal/config/: config.go
teamserver/internal/crypto/: crypto.go
teamserver/internal/database/: database.go
teamserver/internal/listener/: dns.go  http.go  listener.go  profiles.go  smb.go  tcp.go
teamserver/internal/server/: audit.go  autotasks.go  bof_api.go  campaigns.go  chat.go  cradles.go  hosted.go  http_api.go  payload.go  ratelimit.go  reports.go  server.go  webhooks.go  websocket.go
teamserver/internal/storage/: blob.go
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts
web/src/components/agents/: AgentFilterSidebar.tsx  AgentGraph.tsx  AgentTable.tsx  AgentTagManager.tsx  FileBrowser.tsx  KeyloggerViewer.tsx  LateralMovementWizard.tsx  ProcessBrowser.tsx  ScreenshotViewer.tsx  SocksManager.tsx  TokenManager.tsx
web/src/components/artifacts/: ArtifactsPanel.tsx
web/src/components/assembly/: AssemblyPanel.tsx
web/src/components/autotasks/: AutoTaskPanel.tsx
web/src/components/bof/: BOFPanel.tsx
web/src/components/campaigns/: CampaignPanel.tsx
web/src/components/chat/: ChatPanel.tsx
web/src/components/credentials/: CredentialPanel.tsx
web/src/components/dashboard/: Dashboard.tsx
web/src/components/events/: EventLog.tsx
web/src/components/hosted/: HostedFilesPanel.tsx
web/src/components/layout/: BottomTabs.tsx  Sidebar.tsx  StatusBar.tsx
web/src/components/listeners/: ListenerCreateDialog.tsx  ListenerPanel.tsx
web/src/components/operators/: OperatorPanel.tsx
web/src/components/payload/: EvasionTabs.tsx  PayloadGenerator.tsx  payloadData.ts
web/src/components/plugins/: ImgPayloadPanel.tsx  PluginPanel.tsx
web/src/components/profiles/: MalleableProfilePanel.tsx
web/src/components/reports/: ReportPanel.tsx
web/src/components/settings/: SettingsPanel.tsx
web/src/components/tasks/: CommandInput.tsx  TaskPanel.tsx
web/src/components/tools/: DownloadCradleDialog.tsx
web/src/hooks/: useKeyboardShortcuts.ts  usePolling.ts  useWebSocket.ts
web/src/pages/: LoginPage.tsx  MainPage.tsx
web/src/store/: agentStore.ts  artifactStore.ts  authStore.ts  autoTaskStore.ts  campaignStore.ts  chatStore.ts  credentialStore.ts  eventStore.ts  listenerStore.ts  notificationStore.ts  operatorStore.ts  reportStore.ts  taskStore.ts  toastStore.ts  uiStore.ts  webhookStore.ts
web/src/styles/: components.css  global.css  variables.css
web/src/types/: index.ts
(+2 files in other folders)
